# Nacy_Engine

./: .gitignore  CMakeLists.txt  LICENSE  Nacy.sln  README.md
BeatBap/: BeatBap.vcxproj  BeatBap.vcxproj.filters  CMakeLists.txt
BeatBap/Resources/Shaders/: background.fs  background.vs
BeatBap/Resources/Sheets/: Engine x Start.json
BeatBap/Sources/: BeatBap.hpp  Util.hpp  main.cpp
BeatBap/Sources/Game/: BeatBap.cpp  BeatBap.h
BeatBap/Sources/Game/Entities/: Player.h
BeatBap/Sources/Game/Loader/: SheetManager.cpp  SheetManager.h
BeatBap/Sources/Game/Renderer/: BGRenderer.hpp
BeatBap/Sources/Game/Screens/: GameOverScene.h  GameScene.h  GameScene.hpp  MainMenuScene.h  MenuScene.hpp  SelectedScene.hpp  SettingScene.hpp  SplashScene.h  SplashScene.hpp
BeatBap/Sources/Game/Screens/Objects/: Objects.hpp
BeatBap/Sources/Game/System/: MineSweepSystem.h
BeatBap/Sources/Loader/: SheetsLoader.hpp
BeatBap/Sources/Renderer/: BGRenderer.hpp  BackgroundRenderer.hpp
BeatBap/Sources/Screens/: GameScene.hpp  MenuScreen.cpp  MenuScreen.h  SelectedScreen.hpp
BeatBap/Sources/SoundEngine/: SoundEngine.cpp  SoundEngine.h
NacyEngine/: CMakeLists.txt  NacyEngine.vcxproj  NacyEngine.vcxproj.filters  cpp.hint
NacyEngine/Sources/: NacyEngine.h  pch.h
NacyEngine/Sources/Nacy/: Utilities.cpp  Utilities.h
NacyEngine/Sources/Nacy/Core/: Application.cpp  Application.h  Core.h  GameWindow.cpp  GameWindow.h  NApplication.cpp  NApplication.h
NacyEngine/Sources/Nacy/Core/Event/: Event.cpp  Event.h
NacyEngine/Sources/Nacy/Core/Event/Events/: KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
NacyEngine/Sources/Nacy/Event/: Events.h  KeyEvent.h
NacyEngine/Sources/Nacy/Manager/: Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Shape.cpp  Shape.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
NacyEngine/Sources/Nacy/Manager/Assets/: ResourceManager.cpp  ResourceManager.h
NacyEngine/Sources/Nacy/Manager/Camera/: Camera.cpp  Camera.h
NacyEngine/Sources/Nacy/Manager/Carema/: Camera.cpp  Camera.h
NacyEngine/Sources/Nacy/Manager/Input/: InputManager.cpp  InputManager.h
NacyEngine/Sources/Nacy/Manager/OpenGL/: GLManager.cpp  GLManager.h
NacyEngine/Sources/Nacy/Manager/Scene/: Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
NacyEngine/Sources/Nacy/Manager/Shader/: Shader.cpp  Shader.h
NacyEngine/Sources/Nacy/Math/: Vector.cpp  Vector.h
NacyEngine/Sources/Nacy/Node/: Component.cpp  Component.h  Node.cpp  Node.h  SpriteComponent.cpp  SpriteComponent.h
NacyEngine/Sources/Nacy/Object/: GameObject.cpp  GameObject.h
NacyEngine/Sources/Nacy/Object/Components/: Component.hpp
NacyEngine/Sources/Nacy/Object/Components/Game/: DelayComponent.hpp  SpriteComponent.hpp  TransformComponent.hpp
NacyEngine/Sources/Nacy/Object/Components/Interface/: ShapeComponent.hpp  TextLabelComponent.hpp  TextLableComponent.hpp
NacyEngine/Sources/Nacy/Render/: Graphic.cpp  Graphic.h  Graphic.hpp  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Screen.cpp  Screen.h  Shape.cpp  Shape.h  SplashScreen.cpp  SplashScreen.h  Sprite.cpp  Sprite.h  Text.cpp  Text.h  Texture.cpp  Texture.h
NacyEngine/Sources/Nacy/Resources/: Shaders.h
NacyEngine/Sources/Nacy/Util/: Utilities.cpp  Utilities.h
NacyEngine/Sources/Nacy/Util/Animation/: Animation.cpp  Animation.h
NacyEngine/Sources/Nacy/Util/Logger/: Logger.cpp  Logger.h
NacyPacker/: NacyPacker.vcxproj
NacyPacker/Sources/: main.cpp
